--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <head>
-    <title></title>
+    <title>observe</title>
 </head>
 <body>
     <script type="text/javascript" src="./dist/bundle.js"></script>
